bk_ida/gccida/c1/extract_bit_field
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_bit_field/src/expmed.c:1472:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode mode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_bit_field/src/expmed.c:1473:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode tmode, 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_bit_field/src/expmed.c:1478:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v12; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_bit_field/src/expmed.c:1481:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v15; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_bit_field/src/expmed.c:1484:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v18; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_bit_field/src/expmed.c:1485:4: error: expected ';' after expression
rtx v19; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_bit_field/src/expmed.c:1485:5: error: use of undeclared identifier 'v19'
rtx v19; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_bit_field/src/expmed.c:1490:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v24; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_bit_field/src/expmed.c:1492:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v26; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_bit_field/src/expmed.c:1493:4: error: expected ';' after expression
rtx v27; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_bit_field/src/expmed.c:1493:5: error: use of undeclared identifier 'v27'
rtx v27; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_bit_field/src/expmed.c:1500:4: error: expected ';' after expression
rtx v34; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_bit_field/src/expmed.c:1500:5: error: use of undeclared identifier 'v34'
rtx v34; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_bit_field/src/expmed.c:1509:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v43; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_bit_field/src/expmed.c:1510:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v44; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_bit_field/src/expmed.c:1513:4: error: expected ';' after expression
rtx v47; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_bit_field/src/expmed.c:1513:5: error: use of undeclared identifier 'v47'
rtx v47; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_bit_field/src/expmed.c:1514:4: error: expected ';' after expression
rtx fixed_bit_field; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_bit_field/src/expmed.c:1514:5: error: use of undeclared identifier 'fixed_bit_field'; did you mean 'store_bit_field'?
rtx fixed_bit_field; // rax 
    ^~~~~~~~~~~~~~~
    store_bit_field
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_bit_field/src/expmed.c:289:1: note: 'store_bit_field' declared here
store_bit_field (str_rtx, bitsize, bitnum, fieldmode, value, total_size)
^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/extract_bit_field/src/obj/expmed.o] Error 1
